Revert the Gradle --no-daemon interactive wrapper — doesn't work
Confirmed via --info: Gradle 8 always forks a separate daemon JVM to execute
tasks, whether persistent or "single-use" -- --no-daemon only controls reuse,
not whether a fork happens at all. That daemon is detached from the
controlling terminal by design (same mechanism that lets normal daemons
survive terminal closure), so an Exec'd subprocess never gets a real tty.
Tried matching JAVA_HOME and org.gradle.jvmargs to the invoking JVM to dodge
the fork -- still forked. Not fixable via flags; not project-specific.

scripts/download-models.sh (run directly, no Gradle) remains the only
interactive path -- unchanged, still works. Keeps the earlier /dev/tty-probe
fix (more robust than `-t 0` regardless).